feat: add images and css.